# firmware_c

./: CMakeLists.txt
src/: main.c  tusb_config.h
src/flash/: flash.c  flash.h
src/kbd/: kbd.c  kbd.h
src/leds/: leds.c  leds.h  leds_utils.c  leds_utils.h
src/tusb/: tud_utils.c  tud_utils.h  usb_descriptors.c
